sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Thu Feb 19 13:58:15 2009


-> Command sent: <SimulationStep>:
  TargetTime=48 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=160 varID=255 objID=dummy
.. Answered with error to command (160), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=49 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
